[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catppuccin-jupyterlab>=0.2.4",
    "ipympl>=0.9.8",
    "jupyterlab>=4.5.0",
    "manim>=0.19.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
]
